# Yapp

webapp/: manage.py  pyproject.toml
webapp/_user/: admin.py  managers.py  models.py  urls.py
webapp/_user/migrations/: 0001_initial.py  0002_userprofile_user_status_alter_user_created_at.py
webapp/_user/models/: __init__.py  _profile.py  _user.py
webapp/_user/views/: __init__.py  create.py  delete.py  list.py  retrieve.py  update.py
webapp/base/choices/: __init__.py  room_type.py  typing_status.py  userstatus.py
webapp/base/models/: __init__.py  _base.py  _uuid.py
webapp/chat/: consumers.py  routing.py  urls.py  views.py
webapp/core/: asgi.py  urls.py
webapp/core/settings/: _apps.py  _base.py  _cors.py  _database.py  _defaults.py  _rest_framework.py  _sockets.py
webapp/gatekeeper/urls/: __init__.py  token.py
webapp/health/: urls.py
webapp/health/views/: __init__.py  auth_check.py  check.py
webapp/membership/: models.py
webapp/membership/migrations/: 0001_initial.py
webapp/message/: models.py
webapp/message/migrations/: 0001_initial.py
webapp/room/: models.py  urls.py
webapp/room/migrations/: 0001_initial.py  0002_alter_roommodel_created_by.py  0003_roommodel_code.py  0004_alter_roommodel_name.py
webapp/room/views/: __init__.py  create.py  list.py  retrieve.py
webapp/serializers/_user/: __init__.py  create.py  list.py  retrieve.py
webapp/serializers/health/: __init__.py  check.py
webapp/serializers/profile/: __init__.py  create.py  list.py  retrieve.py  update.py
webapp/serializers/room/: __init__.py  create.py  list.py  (+1 more)
(+5 files in other folders)
